--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-spring": "^9.5.5",
-    "react-spring-3d-carousel": "^1.3.4"
+    "react-spring-3d-carousel": "^1.3.4",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
