--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "export": "next export -o _static"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "emailjs-com": "^3.2.0",
     "jquery": "^3.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -17,6 +19,7 @@
     "react-icons": "^4.10.1",
     "react-spring": "^9.5.5",
     "react-spring-3d-carousel": "^1.3.4",
+    "react-toastify": "^9.1.3",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
