--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "emailjs-com": "^3.2.0",
     "jquery": "^3.6.1",
-    "next": "12.3.1",
+    "next": "^14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
