--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-spinners": "^0.13.8",
     "react-spring": "^9.5.5",
     "react-spring-3d-carousel": "^1.3.4",
     "react-toastify": "^9.1.3",
