--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.0.3",
     "jquery": "^3.6.1",
     "next": "^14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook": "^0.0.1",
     "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
     "react-spring": "^9.5.5",
     "react-spring-3d-carousel": "^1.3.4",
     "react-toastify": "^9.1.3",
+    "react-use": "^17.5.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
